# starspeed23

./: .gitignore  CMakeLists.txt  CMakeSettings.json  app.rc
Builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  StarSpeed23.sln  StarSpeed23.vcxproj  StarSpeed23.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Builds/MinSizeRel/: StarSpeed23.exp  StarSpeed23.lib
Builds/StarSpeed23.dir/MinSizeRel/: StarSpeed23.exe.recipe
linux/: CMakeCache.txt  Makefile  StarSpeed23  cmake_install.cmake
src/: achievements.cpp  discord.cpp  main.cpp  mine.cpp  objects.cpp  objects.ixx  registries.cpp  resourcepack.cpp  sceneswitcher.cpp  splashs.cpp  textures.cpp  tinyfiledialogs.cpp  zlib.hpp
src/starspeed/: achievements.hpp  cursor.hpp  discord.hpp  planet.hpp  planetutil.hpp  profile.hpp  resourcepack.hpp  sceneswitcher.hpp  splashs.hpp  textures.hpp  utility.hpp
src/starspeed/components/: down_movement.hpp
src/starspeed/init/: objects.hpp  registries.hpp
src/starspeed/objects/: background_spawner.json.hpp  enemy_spawner.hpp  explosion.hpp  music_handler.hpp  player_map.hpp  star.hpp  swdavatar.hpp
src/starspeed/objects/bullets/: bullet.hpp
src/starspeed/objects/ships/: enemy.hpp  player.hpp  ship.hpp
src/starspeed/objects/ships/enemies/: cent.hpp  cina.hpp  esent.hpp  faire.hpp  pine.hpp  saw.hpp  skrip.hpp  zenin.hpp
src/starspeed/scenes/: cell_map.hpp  dm_titlescreen.hpp  fight.hpp  fight_end.hpp  login.hpp  splash.hpp  titlescreen.hpp
