cmake_minimum_required(VERSION 3.20)
project(StarSpeed23)
set(CMAKE_CXX_STANDARD 23)
set(x86 OFF CACHE BOOL "Build for 32bit")
set(CMAKE_CXX_FLAGS "-std=c++2b")
set(LIBRARY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/libs/windows/)
set(VERSION "0.0.1" CACHE STRING "")

if(UNIX)
	if(APPLE) 
		message("OS: MacOS")
		set(LIBRARY_PATH "libs/macos/")
	endif(APPLE)
	
	if(NOT APPLE)
		message("OS: Linux")
		set(LIBRARY_PATH "libs/linux/")
	endif(NOT APPLE)
endif(UNIX)

if(WIN32)
	message("OS: Windows")
endif(WIN32)

file(GLOB_RECURSE SOURCES_CPP CONFIGURE_DEPENDS "src/*.cpp" "src/*.hpp")
file(GLOB_RECURSE LIBRARIES CONFIGURE_DEPENDS "${LIBRARY_PATH}*.lib" "${LIBRARY_PATH}*.dylib" "${LIBRARY_PATH}*.so" "${LIBRARY_PATH}*.a")

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/includes/ "H:/CPP_HEADERS/include")
#link_libraries(LIBRARIES)

if(discord)
	message("Build includes DISCORD")
	message(SOURCES_CPP)
	add_compile_definitions(FUCHSLIB_BUILD_DISCORD)
else(discord)
	#Removes Discord source and header files from the MASTER Source GLOB
	list(FILTER SOURCES_CPP EXCLUDE REGEX "src/discord/core.cpp")
	list(REMOVE_ITEM LIBRARIES "${LIBRARY_PATH}discord_game_sdk.dll.lib")
	list(REMOVE_ITEM LIBRARIES "${LIBRARY_PATH}libdiscord_game_sdk.so")
endif(discord)

if(x86)
	set(CMAKE_CXX_FLAGS "-m32")
	set_target_properties(FuchsLib PROPERTIES PREFIX "x86-")
	message("Building for x86 (32-Bit)")
else()
	message("Building for 64-Bit")
endif(x86)

message("Using Libs: ${LIBRARIES}")
link_libraries(${LIBRARIES})
set(PROJECT_LINK_LIBS ${LIBRARIES})
add_executable(StarSpeed23 ${SOURCES_CPP})
