cmake_minimum_required(VERSION 3.20)
project(StarSpeed23)
set(CMAKE_CXX_STANDARD 23)
set(x86 OFF CACHE BOOL "Build for 32bit")
set(CMAKE_CXX_FLAGS "-std=c++2b")
set(LIBRARY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/libs/windows/)
set(VERSION "0.0.1" CACHE STRING "")
set(MAKE_GENERATOR_PLATFORM x64)
set(OUTPUT_TYPE RELEASE)
set(CMAKE_BUILD_TYPE Release)
add_compile_definitions(FUCHSLIB_BUILD_DISCORD)

message("Build: " ${CMAKE_BUILD_TYPE})

IF(OUTPUT_TYPE MATCHES RELEASE)
    message("RELEASE")
	set(LIBRARY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/libs/windows_release/)
ENDIF(OUTPUT_TYPE MATCHES RELEASE)

if(UNIX)
	if(APPLE) 
		message("OS: MacOS")
		set(LIBRARY_PATH "libs/macos/")
	endif(APPLE)
	
	if(NOT APPLE)
		message("OS: Linux")
		set(LIBRARY_PATH "libs/linux/")
	endif(NOT APPLE)
endif(UNIX)

if(WIN32)
	message("OS: Windows")
endif(WIN32)

file(GLOB_RECURSE SOURCES_CPP CONFIGURE_DEPENDS "src/*.cpp" "src/*.hpp")
file(GLOB_RECURSE LIBRARIES CONFIGURE_DEPENDS "${LIBRARY_PATH}*.lib" "${LIBRARY_PATH}*.dylib" "${LIBRARY_PATH}*.so" "${LIBRARY_PATH}*.a")

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/includes/ "H:/CPP_HEADERS/include")
#link_libraries(LIBRARIES)

if(discord)
	message("Build includes DISCORD")
	message(SOURCES_CPP)
	add_compile_definitions(FUCHSLIB_BUILD_DISCORD)
else(discord)
	#Removes Discord source and header files from the MASTER Source GLOB
	list(FILTER SOURCES_CPP EXCLUDE REGEX "src/discord/core.cpp")
	list(REMOVE_ITEM LIBRARIES "${LIBRARY_PATH}discord_game_sdk.dll.lib")
	list(REMOVE_ITEM LIBRARIES "${LIBRARY_PATH}libdiscord_game_sdk.so")
endif(discord)

if(x86)
	set(CMAKE_CXX_FLAGS "-m32")
	set_target_properties(FuchsLib PROPERTIES PREFIX "x86-")
	message("Building for x86 (32-Bit)")
else()
	message("Building for 64-Bit")
endif(x86)
message("Using Libs: ${LIBRARIES}")
link_libraries(${LIBRARIES})
set(PROJECT_LINK_LIBS ${LIBRARIES})

if(WIN32)
	add_executable(StarSpeed23 ${SOURCES_CPP} "app.rc")
else()
	add_executable(StarSpeed23 ${SOURCES_CPP})
endif(WIN32)
IF (APPLE)
find_library(SDL2FM SDL2)
if (NOT SDL2FM)
    message(FATAL_ERROR "SDL2 not found")
endif()
find_package(SDL2_image REQUIRED)
find_library(SDL2TTF SDL2_ttf)
if (NOT SDL2TTF)
    message(FATAL_ERROR "SDL2 TTF not found")
endif()
   target_link_libraries(StarSpeed23 PRIVATE ${SDL2FM} ${SDL2TTF} SDL2_image::SDL2_image)
ENDIF (APPLE)
target_compile_options(StarSpeed23 PRIVATE "/MT")